# atlas

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  NOTICE  PRD.md  README.md  Technical Stack.md  agents.md  install.ps1  install.sh  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  website-ci.yml
apps/backend/: package.json
apps/backend/src/: crawler.ts  index.ts  indexer.ts  manifest.ts  watcher.ts
apps/desktop/: index.html  lancedb_out.txt  package.json  read_lancedb.py  test_embed.py  test_search.py  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  cargo_check.txt  cargo_check_utf8.txt  cargo_tree.txt  error.txt  error2.txt  error3.txt  error4.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  crawler.rs  embeddings.rs  git.rs  lib.rs  llm.rs  manifest.rs  parser.rs  shield.rs  vectorstore.rs  watcher.rs  websearch.rs
apps/desktop/src/components/: AnalyticsDashboard.tsx  ArchitectureGraph.tsx  Button.tsx  CodeDiffProposed.tsx  CommandPalette.tsx  FileTree.tsx  GlassPanel.tsx  InlineFileViewer.tsx  Input.tsx  LandingScreen.tsx  ModelSelector.tsx  OverlayChat.tsx  SettingsModal.tsx  SetupModal.tsx  UpdateChecker.tsx  WorkspaceLayout.tsx
apps/desktop/src/lib/: api.ts  chats.ts  i18n.ts  personas.ts  theme.ts  toast.tsx  workspaces.ts
docs/: architecture.md  benchmarks.md  design-doc.md  prd.md  start.md  tech-stack.md  todo.md
docs/design/: design-document.md
docs/planning/: todo.md  v1-release-plan.md  v1-release-todo.md
docs/technical/: architecture-convergence.md  architecture.md  atlas-documentation.md
website/: .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vitest.config.ts
website/.next/: BUILD_ID  app-path-routes-manifest.json  prerender-manifest.json  required-server-files.json  trace
website/.next/cache/: .previewinfo  .rscinfo  chrome-devtools-workspace-uuid
website/.next/cache/eslint/: .cache_161vlxx
website/.next/server/: server-reference-manifest.json  webpack-runtime.js
website/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
website/.next/server/chunks/: 911.js
website/.next/server/pages/: 500.html
website/.next/server/vendor-chunks/: @swc.js  clsx.js  focus-trap-react.js  focus-trap.js  gsap.js  lucide-react.js  object-assign.js  prop-types.js  react-is.js  tabbable.js
website/.next/static/chunks/: 112-8297dc710fd7d52a.js  _app-pages-browser_node_modules_next_dist_client_dev_noop-turbopack-hmr_js.js  app-pages-internals.js  main-app-d8e23e7f868a0cf3.js  webpack-a6b864285eafd693.js  webpack.js
website/.next/static/css/: 1bffb2759f11ba21.css
website/.next/static/w1hf4ytj1igA8HbQxP-cK/: _buildManifest.js
website/.next/types/: routes.d.ts  validator.ts
website/.next/types/app/: layout.ts  page.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/api/releases/: route.ts
website/app/components/ChangelogAccordion/: index.tsx
website/app/components/FeaturePanel/: index.tsx
website/app/components/Footer/: index.tsx
website/app/components/Hero/: index.tsx
website/app/components/InteractiveDemo/: index.tsx
website/app/components/NavBar/: index.tsx
website/app/components/ScreenshotsCarousel/: index.tsx
website/app/components/SpecsSection/: DownloadClient.tsx  index.tsx
website/lib/: content.ts  format.ts  github.ts  os.ts  releases.ts  types.ts
website/scripts/: sync-assets.sh
website/tests/a11y/: homepage.test.tsx
website/tests/unit/: release-utils.test.ts
website/types/: jest-axe.d.ts
(+34 files in other folders)
